add preparation for pdf export